--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0px;
     box-sizing: border-box;
+    background-color: whitesmoke;
 }
 
 a {
@@ -98,4 +99,44 @@ a:visited {
     height: 18px;
 }
 
+.album-card {
+    width: 550px;
+    margin: 100px auto 100px auto; 
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: white;
+    box-shadow: 1px 1px 8px (0, 0, 0, 0.25);
+}
 
+.album-cover-art {
+    width: 250px;
+    height: 250px;
+    margin-right: 10px;
+}
+
+.album-card-contents {
+    width: 300px;
+    height: 250px;
+}
+
+.info-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.info-group > img {
+    width: 18px;
+    height: 18px;
+    margin-right: 5px;
+}
+
+.util-box-border-blue {
+    border: 1px blue dotted; 
+}
+
+.util-box-border-red {
+    border: 1px red dotted;
+}
